re-ran pydoc command

--- a/BowlingGame.html
+++ b/BowlingGame.html
@@ -42,7 +42,7 @@
 Args:<br>
 self(<a href="#BowlingGame">BowlingGame</a>):&nbsp;the&nbsp;<a href="#BowlingGame">BowlingGame</a>&nbsp;<a href="builtins.html#object">object</a>&nbsp;to&nbsp;initalize</span></dd></dl>
 
-<dl><dt><a name="BowlingGame-calculateFrameScore"><strong>calculateFrameScore</strong></a>(self, rollIndex)</dt><dd><span class="code">This&nbsp;function&nbsp;calculates&nbsp;the&nbsp;frame&nbsp;score&nbsp;and&nbsp;returns&nbsp;the&nbsp;result<br>
+<dl><dt><a name="BowlingGame-calculateFrameScore"><strong>calculateFrameScore</strong></a>(self, rollIndex)</dt><dd><span class="code">This&nbsp;function&nbsp;calculates&nbsp;the&nbsp;frame&nbsp;score&nbsp;and&nbsp;returns&nbsp;the&nbsp;result.<br>
 &nbsp;<br>
 Args:<br>
 self(<a href="#BowlingGame">BowlingGame</a>):&nbsp;the&nbsp;<a href="#BowlingGame">BowlingGame</a>&nbsp;<a href="builtins.html#object">object</a><br>
@@ -51,7 +51,7 @@ rollIndex(int):&nbsp;index&nbsp;of&nbsp;frame&nbsp;to&nbsp;calculate&nbsp;score&
 Returns:<br>
 int:&nbsp;score&nbsp;of&nbsp;frame</span></dd></dl>
 
-<dl><dt><a name="BowlingGame-calculateSpareScore"><strong>calculateSpareScore</strong></a>(self, rollIndex)</dt><dd><span class="code">This&nbsp;function&nbsp;calculates&nbsp;the&nbsp;spare&nbsp;score&nbsp;and&nbsp;returns&nbsp;the&nbsp;result<br>
+<dl><dt><a name="BowlingGame-calculateSpareScore"><strong>calculateSpareScore</strong></a>(self, rollIndex)</dt><dd><span class="code">This&nbsp;function&nbsp;calculates&nbsp;the&nbsp;spare&nbsp;score&nbsp;and&nbsp;returns&nbsp;the&nbsp;result.<br>
 &nbsp;<br>
 Args:<br>
 self(<a href="#BowlingGame">BowlingGame</a>):&nbsp;the&nbsp;<a href="#BowlingGame">BowlingGame</a>&nbsp;<a href="builtins.html#object">object</a><br>
@@ -60,7 +60,7 @@ rollIndex(int):&nbsp;index&nbsp;of&nbsp;spare&nbsp;to&nbsp;calculate&nbsp;score&
 Returns:<br>
 int:&nbsp;score&nbsp;of&nbsp;spare</span></dd></dl>
 
-<dl><dt><a name="BowlingGame-calculateStrikeScore"><strong>calculateStrikeScore</strong></a>(self, rollIndex)</dt><dd><span class="code">This&nbsp;function&nbsp;calculates&nbsp;the&nbsp;strike&nbsp;score&nbsp;and&nbsp;returns&nbsp;the&nbsp;result<br>
+<dl><dt><a name="BowlingGame-calculateStrikeScore"><strong>calculateStrikeScore</strong></a>(self, rollIndex)</dt><dd><span class="code">This&nbsp;function&nbsp;calculates&nbsp;the&nbsp;strike&nbsp;score&nbsp;and&nbsp;returns&nbsp;the&nbsp;result.<br>
 &nbsp;<br>
 Args:<br>
 self(<a href="#BowlingGame">BowlingGame</a>):&nbsp;the&nbsp;<a href="#BowlingGame">BowlingGame</a>&nbsp;<a href="builtins.html#object">object</a><br>
